--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         </p>
         <h2>Estas son algunas de las marcas que trabajamos</h2>
         <ul class="marcas">
-            <li><img src="../ProyectoMundoFrio/Multimedia/conosud.png" alt="conosud"></li>
-            <li><img src="../ProyectoMundoFrio/Multimedia/elnoble.png" alt="elnoble"></li>
-            <li><img src="../ProyectoMundoFrio/Multimedia/feliceslasvacas.png" alt="feliceslasvacas"></li>
-            <li><img src="../ProyectoMundoFrio/Multimedia/granjadelsol.png" alt="granjadelsol"></li>
-            <li><img src="../ProyectoMundoFrio/Multimedia/munini.png" alt="munini"></li>
-            <li><img src="../ProyectoMundoFrio/Multimedia/notco.png" alt="notco"></li>
+            <li><img src="./Multimedia/conosud.png" alt="conosud"></li>
+            <li><img src="./Multimedia/elnoble.png" alt="elnoble"></li>
+            <li><img src="./Multimedia/feliceslasvacas.png" alt="feliceslasvacas"></li>
+            <li><img src="./Multimedia/granjadelsol.png" alt="granjadelsol"></li>
+            <li><img src="./Multimedia/munini.png" alt="munini"></li>
+            <li><img src="./Multimedia/notco.png" alt="notco"></li>
         </ul>
     </main>
     <footer>
