--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -25,8 +25,8 @@
     </header>
     <main class="mainNosotros">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus sequi adipisci distinctio omnis iure nesciunt voluptas obcaecati optio fuga saepe sed eos corporis temporibus magnam, error, earum soluta tenetur numquam.</p>
-        <img src="../Multimedia/MundoFrio.png" alt="">
-        <img src="../Multimedia/MundoFrio.png" alt="">
+        <img src="../Multimedia/MundoFrio.png" alt="" width="100%">
+        <img src="../Multimedia/MundoFrio.png" alt="" width="100%">
     </main>
     <footer>
         <div>
