--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shorcut icon" href="./Multimedia/MundoFrio.svg" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>Mundo Frio</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -28,14 +29,33 @@
         <p class="textoInicial">Mundo frio es un negocio local dedicado exclusivamente a la venta de una gran variedad de productos congelados. Lo invitamos a recorrer nuestra pagina para que pueda conocer todos los alimentos que puede encontrar en nuestro local. 
         </p>
         <h2>Estas son algunas de las marcas que trabajamos</h2>
-        <ul class="marcas">
-            <li><img src="./Multimedia/conosud.png" alt="conosud"></li>
-            <li><img src="./Multimedia/elnoble.png" alt="elnoble"></li>
-            <li><img src="./Multimedia/feliceslasvacas.png" alt="feliceslasvacas"></li>
-            <li><img src="./Multimedia/granjadelsol.png" alt="granjadelsol"></li>
-            <li><img src="./Multimedia/munini.png" alt="munini"></li>
-            <li><img src="./Multimedia/notco.png" alt="notco"></li>
-        </ul>
+        <section id="carouselExampleControls" class="carousel slide w-50" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./Multimedia/conosud.png" class="d-block w-100" alt="conosud">
+                </div>
+            <div class="carousel-item">
+                <img src="./Multimedia/elnoble.png" class="d-block w-100" alt="elnoble">
+            </div>
+            <div class="carousel-item">
+                <img src="./Multimedia/feliceslasvacas.png" class="d-block w-100" alt="feliceslasvacas">
+            </div>
+            <div class="carousel-item">
+                <img src="./Multimedia/granjadelsol.png" class="d-block w-100" alt="granjadelsol">
+            </div>
+            <div class="carousel-item">
+                <img src="./Multimedia/notco.png" class="d-block w-100" alt="notco">
+            </div>  
+            </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </section>
     </main>
     <footer>
         <div>
@@ -45,5 +65,6 @@
         </div>
         <p>Diseñado por Ezequiel Perez</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
