--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shorcut icon" href="../Multimedia/MundoFrio.svg" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>Mundo Frio</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -25,25 +26,22 @@
     </header>
     <main>
         <h1>Contacto</h1>
-        <form class="formulario">
-            <h2>Dejanos tu comentario, consulta o inquietud que tengas:</h2>
-            <div>
-                <label for="nombre">Nombre:</label>
-                <input type="text" name="nombre" placeholder="Ingrese su nombre" required>
+        <form action="formulario mx-auto">
+            <div class="mb-3 px-2">
+                <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Ingrese su nombre">
             </div>
-            <div>
-                <label for="apellido">Apellido:</label>
-                <input type="text" name="apellido" placeholder="Ingrese su apellido" required>
+            <div class="mb-3 px-2">
+                <label for="exampleFormControlInput1" class="form-label">Apellido</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ingrese su apellido">
             </div>
-            <div>
-                <label for="email">Email:</label>
-                <input type="email" name="email" placeholder="Ingrese su email" required>
+            <div class="mb-3 px-2">
+                <label for="exampleFormControlInput1" class="form-label">Email</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
             </div>
-            <div>
-                <textarea name="descRecom" placeholder="Escriba su mensaje" required></textarea>
-                <div>
-                    <input type="submit" value="Enviar">
-                </div>
+            <div class="mb-3 px-2">
+                <label for="exampleFormControlTextarea1" class="form-label">Sugerencia</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
         </form>
     </main>
@@ -55,5 +53,6 @@
         </div>
         <p>Diseñado por Ezequiel Perez</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
