--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
+    <!-- <header>
         <picture>
             <img src="./Multimedia/MundoFrio.svg" alt="logo" width="150vh" height="150vh">
         </picture>
@@ -23,47 +23,77 @@
                 <li class="lista"><a class="boton" href="./pages/visitanos.html">Visitanos</a></li>
             </ul>
         </nav>
+    </header> -->
+    <header>
+    <picture>
+        <img src="./Multimedia/MundoFrio.svg" alt="logo" width="150vh" height="150vh">
+    </picture>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./pages/nosotros.html">Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./pages/productos.html">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./pages/contactanos.html">Contactanos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./pages/visitanos.html">Visitanos</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     </header>
     <main>
         <h1>¿Quienes somos?</h1>
-        <p class="textoInicial">Mundo frio es un negocio local dedicado exclusivamente a la venta de una gran variedad de productos congelados. Lo invitamos a recorrer nuestra pagina para que pueda conocer todos los alimentos que puede encontrar en nuestro local. 
-        </p>
+        <div class="textoInicial">
+            <p>Mundo frio es un negocio local dedicado exclusivamente a la venta de una gran variedad de productos congelados. Lo invitamos a recorrer nuestra pagina para que pueda conocer todos los alimentos que puede encontrar en nuestro local.</p>
+        </div>  
         <h2>Estas son algunas de las marcas que trabajamos</h2>
-        <section id="carouselExampleControls" class="carousel slide w-50" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./Multimedia/conosud.png" class="d-block w-100" alt="conosud">
+        <section class="d-flex justify-content-center align-items-center w-100">
+            <div id="carouselExampleControls" class="carousel slide w-50 h-auto" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./Multimedia/conosud.png" class="d-block w-100" alt="conosud">
+                    </div>
+                <div class="carousel-item">
+                    <img src="./Multimedia/elnoble.png" class="d-block w-100" alt="elnoble">
                 </div>
-            <div class="carousel-item">
-                <img src="./Multimedia/elnoble.png" class="d-block w-100" alt="elnoble">
-            </div>
-            <div class="carousel-item">
-                <img src="./Multimedia/feliceslasvacas.png" class="d-block w-100" alt="feliceslasvacas">
-            </div>
-            <div class="carousel-item">
-                <img src="./Multimedia/granjadelsol.png" class="d-block w-100" alt="granjadelsol">
-            </div>
-            <div class="carousel-item">
-                <img src="./Multimedia/notco.png" class="d-block w-100" alt="notco">
-            </div>  
-            </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
+                <div class="carousel-item">
+                    <img src="./Multimedia/feliceslasvacas.png" class="d-block w-100" alt="feliceslasvacas">
+                </div>
+                <div class="carousel-item">
+                    <img src="./Multimedia/granjadelsol.png" class="d-block w-100" alt="granjadelsol">
+                </div>
+                <div class="carousel-item">
+                    <img src="./Multimedia/notco.png" class="d-block w-100" alt="notco">
+                </div>  
+                </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
                 </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+            </div>
         </section>
     </main>
-    <footer>
-        <div>
-            <p>Seguinos en nuestras redes:</p>
-            <a href="https://www.facebook.com/MundoFrioGalvez"> <img src="./Multimedia/facebook.png" width="30" height="30" alt="Facebook" /> </a>
-            <a href="https://www.instagram.com/mundofriogalvez"> <img src="./Multimedia/instagram.png" width="30" height="30" alt="Instagram" /> </a>
+    <footer class="d-flex flex-row justify-content-around px-2">
+        <div class="d-flex flex-row justify-content-between align-items-center px-2">
+            <div class="px-2">
+                <p>Seguinos en nuestras redes:</p>
+            </div>
+            <div class="px-2">
+                <a href="https://www.facebook.com/MundoFrioGalvez"> <img src="./Multimedia/facebook.png" width="30" height="30" alt="Facebook" /> </a>
+                <a href="https://www.instagram.com/mundofriogalvez"> <img src="./Multimedia/instagram.png" width="30" height="30" alt="Instagram" /> </a>
+            </div>
         </div>
-        <p>Diseñado por Ezequiel Perez</p>
+        <div class="d-flex align-items-center px-2">
+            <p>Diseñado por Ezequiel Perez</p>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
