--- a/pages/visitanos.html
+++ b/pages/visitanos.html
@@ -14,26 +14,39 @@
         <picture>
             <img src="../Multimedia/MundoFrio.svg" alt="logo" width="150vh" height="150vh">
         </picture>
-        <nav>
-            <ul class="navegador">
-                <li class="lista"><a class="boton" href="../index.html">Inicio</a></li>
-                <li class="lista"><a class="boton" href="./nosotros.html">Nosotros</a></li>
-                <li class="lista"><a class="boton" href="./productos.html">Productos</a></li>
-                <li class="lista"><a class="boton" href="./contactanos.html">Contactanos</a></li>
-                <li class="lista"><a class="boton" href="./visitanos.html">Visitanos</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./nosotros.html">Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./productos.html">Productos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./contactanos.html">Contactanos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./visitanos.html">Visitanos</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d502.77498612699475!2d-61.21435306584417!3d-32.035330021104684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b58c8bae0b2bf3%3A0x2814cb774c2b48e5!2sLeandro%20N.%20Alem%20374%2C%20S2252GHB%20G%C3%A1lvez%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1652051910983!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d502.77498612699475!2d-61.21435306584417!3d-32.035330021104684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b58c8bae0b2bf3%3A0x2814cb774c2b48e5!2sLeandro%20N.%20Alem%20374%2C%20S2252GHB%20G%C3%A1lvez%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1652051910983!5m2!1ses!2sar" width="100%" height="550px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
-    <footer>
-        <div>
-            <p>Seguinos en nuestras redes:</p>
-            <a href="https://www.facebook.com/MundoFrioGalvez"> <img src="../Multimedia/facebook.png" width="30" height="30" alt="Facebook" /> </a>
-            <a href="https://www.instagram.com/mundofriogalvez"> <img src="../Multimedia/instagram.png" width="30" height="30" alt="Instagram" /> </a>
+    <footer class="d-flex flex-row justify-content-around px-2">
+        <div class="d-flex flex-row justify-content-between align-items-center px-2">
+            <div class="px-2">
+                <p>Seguinos en nuestras redes:</p>
+            </div>
+            <div class="px-2">
+                <a href="https://www.facebook.com/MundoFrioGalvez"> <img src="../Multimedia/facebook.png" width="30" height="30" alt="Facebook" /> </a>
+                <a href="https://www.instagram.com/mundofriogalvez"> <img src="../Multimedia/instagram.png" width="30" height="30" alt="Instagram" /> </a>
+            </div>
         </div>
-        <p>Diseñado por Ezequiel Perez</p>
+        <div class="d-flex align-items-center px-2">
+            <p>Diseñado por Ezequiel Perez</p>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
