--- a/index.html
+++ b/index.html
@@ -7,23 +7,10 @@
     <link rel="shorcut icon" href="./Multimedia/MundoFrio.svg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>Mundo Frio</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/translated.css">
 </head>
 <body>
-    <!-- <header>
-        <picture>
-            <img src="./Multimedia/MundoFrio.svg" alt="logo" width="150vh" height="150vh">
-        </picture>
-        <nav>
-            <ul class="navegador">
-                <li class="lista"><a class="boton" href="./index.html">Inicio</a></li>
-                <li class="lista"><a class="boton" href="./pages/nosotros.html">Nosotros</a></li>
-                <li class="lista"><a class="boton" href="./pages/productos.html">Productos</a></li>
-                <li class="lista"><a class="boton" href="./pages/contactanos.html">Contactanos</a></li>
-                <li class="lista"><a class="boton" href="./pages/visitanos.html">Visitanos</a></li>
-            </ul>
-        </nav>
-    </header> -->
     <header>
     <picture>
         <img src="./Multimedia/MundoFrio.svg" alt="logo" width="150vh" height="150vh">
