--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Encontra todos los productos congelados que ofrecemos en nuestro local">
+    <meta name="keywords" content="CONGELADOS, FRUTAS, VERDURAS, PESCADOS, VEGETARIANOS, VEGANOS, PAPAS FRITAS, HELADOS, YOGURES">
     <link rel="shorcut icon" href="./Multimedia/MundoFrio.svg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <title>Mundo Frio</title>
+    <title>Mundo Frio | Inicio</title>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/translated.css">
 </head>
@@ -23,8 +25,8 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./pages/nosotros.html">Nosotros</a></li>
                     <li class="nav-item"><a class="nav-link" href="./pages/productos.html">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./pages/nosotros.html">Nosotros</a></li>
                     <li class="nav-item"><a class="nav-link" href="./pages/contactanos.html">Contactanos</a></li>
                     <li class="nav-item"><a class="nav-link" href="./pages/visitanos.html">Visitanos</a></li>
                 </ul>
