--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Descubri al gran variedad de prodcutos que podes encontrar en nuestro local">
+    <meta name="keywords" content="CONGELADOS, FRUTAS, VERDURAS, PESCADOS, VEGETARIANOS, VEGANOS, PAPAS FRITAS, HELADOS, YOGURES">
     <link rel="shorcut icon" href="../Multimedia/MundoFrio.svg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <title>Mundo Frio</title>
+    <title>Mundo Frio | Productos</title>
     <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
@@ -22,8 +24,8 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./nosotros.html">Nosotros</a></li>
                         <li class="nav-item"><a class="nav-link" href="./productos.html">Productos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./nosotros.html">Nosotros</a></li>
                         <li class="nav-item"><a class="nav-link" href="./contactanos.html">Contactanos</a></li>
                         <li class="nav-item"><a class="nav-link" href="./visitanos.html">Visitanos</a></li>
                     </ul>
