Trabajo casi terminado

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./pages/productos.html">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./pages/nosotros.html">Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./pages/contactanos.html">Contactanos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./pages/visitanos.html">Visitanos</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="./pages/productos.html">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="./pages/nosotros.html">Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="./pages/contactanos.html">Contactanos</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="./pages/visitanos.html">Visitanos</a></li>
                 </ul>
             </div>
         </div>
@@ -57,7 +57,16 @@
                 </div>
                 <div class="carousel-item">
                     <img src="./Multimedia/notco.png" class="d-block w-100" alt="notco">
-                </div>  
+                </div> 
+                <div class="carousel-item">
+                    <img src="./Multimedia/paladini.png" class="d-block w-100" alt="notco">
+                </div>
+                <div class="carousel-item">
+                    <img src="./Multimedia/munini.png" class="d-block w-100" alt="notco">
+                </div> 
+                <div class="carousel-item">
+                    <img src="./Multimedia/solimeno.png" class="d-block w-100" alt="notco">
+                </div>   
                 </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
