--- a/pages/productos.html
+++ b/pages/productos.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>Mundo Frio | Productos</title>
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/translated.css">
 </head>
 <body>
     <header>
@@ -24,10 +25,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./productos.html">Productos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./nosotros.html">Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./contactanos.html">Contactanos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./visitanos.html">Visitanos</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="./productos.html">Productos</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="./nosotros.html">Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="./contactanos.html">Contactanos</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="./visitanos.html">Visitanos</a></li>
                     </ul>
                 </div>
             </div>
@@ -37,33 +38,41 @@
         <section class="productos">
             <ul class="listaProductos">
                 <div>
-                    <img src="../Multimedia/Conosud/arandanos.jpeg" alt="arandanos" width="200px" height="200px">
-                    <p>Descripcion: Arandanos</p>
+                    <img src="../Multimedia/Conosud/arandanos.png" alt="arandanos" width="100%">
+                    <p>Arandanos</p>
                 </div>
                 <div>
-                    <img src="../Multimedia/Conosud/frutilla.jpeg" alt="frutilla" width="200px" height="200px">
-                    <p>Descripcion: Frutilla</p>
+                    <img src="../Multimedia/Conosud/frutilla.png" alt="frutilla" width="100%">
+                    <p>Frutilla</p>
                 </div>
                 <div>
-                    <img src="../Multimedia/Conosud/frutosrojos.jpeg" alt="frutosrojos" width="200px" height="200px">
-                    <p>Descripcion: Frutos Rojos</p>
+                    <img src="../Multimedia/Conosud/frutosrojos.png" alt="frutosrojos" width="100%">
+                    <p>Frutos Rojos</p>
                 </div>
                 <div>
-                    <img src="../Multimedia/Conosud/arveja.jpeg" alt="arveja" width="200px" height="200px">
-                    <p>Descripcion: Arveja</p>
+                    <img src="../Multimedia/Conosud/arveja.png" alt="arveja" width="100%">
+                    <p>Arveja</p>
                 </div>
                 <div>
-                    <img src="../Multimedia/Conosud/choclo.jpeg" alt="choclo" width="200px" height="200px">
-                    <p>Descripcion: Choclo</p>
+                    <img src="../Multimedia/Conosud/choclo.png" alt="choclo" width="100%">
+                    <p>Choclo</p>
                 </div>
                 <div>
-                    <img src="../Multimedia/Conosud/remolacha.jpeg" alt="remolacha" width="200px" height="200px">
-                    <p>Descripcion: Remolacha</p>
+                    <img src="../Multimedia/Conosud/remolacha.png" alt="remolacha" width="100%">
+                    <p>Remolacha</p>
+                </div>
+                <div>
+                    <img src="../Multimedia/Conosud/cebolla.png" alt="cebolla" width="100%">
+                    <p>Cebolla</p>
+                </div>
+                <div>
+                    <img src="../Multimedia/Conosud/chaucha.png" alt="chaucha" width="100%">
+                    <p>Chaucha</p>
                 </div>
             </ul>
         </section>
     </main>
-    <footer class="d-flex flex-row justify-content-around px-2">
+    <footer class="d-flex flex-row justify-content-around px-2 fixed-bottom">
         <div class="d-flex flex-row justify-content-between align-items-center px-2">
             <div class="px-2">
                 <p>Seguinos en nuestras redes:</p>
