--- a/pages/visitanos.html
+++ b/pages/visitanos.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>Mundo Frio | Visitanos</title>
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/translated.css">
 </head>
 <body>
     <header>
@@ -24,10 +25,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./productos.html">Productos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./nosotros.html">Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./contactanos.html">Contactanos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./visitanos.html">Visitanos</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="./productos.html">Productos</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="./nosotros.html">Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="./contactanos.html">Contactanos</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="./visitanos.html">Visitanos</a></li>
                     </ul>
                 </div>
             </div>
