Trabajo casi terminado

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -39,7 +39,7 @@
         <img src="../Multimedia/MundoFrio.png" alt="" width="100%">
         <img src="../Multimedia/MundoFrio.png" alt="" width="100%">
     </main>
-    <footer class="d-flex flex-row justify-content-around px-2">
+    <footer class="d-flex flex-row justify-content-around px-2 fixed-bottom">
         <div class="d-flex flex-row justify-content-between align-items-center px-2">
             <div class="px-2">
                 <p>Seguinos en nuestras redes:</p>
