--- a/pages/visitanos.html
+++ b/pages/visitanos.html
@@ -37,7 +37,7 @@
     <main>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d502.77498612699475!2d-61.21435306584417!3d-32.035330021104684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b58c8bae0b2bf3%3A0x2814cb774c2b48e5!2sLeandro%20N.%20Alem%20374%2C%20S2252GHB%20G%C3%A1lvez%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1652051910983!5m2!1ses!2sar" width="100%" height="550px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
-    <footer class="d-flex flex-row justify-content-around px-2">
+    <footer class="d-flex flex-row justify-content-around px-2 fixed-bottom">
         <div class="d-flex flex-row justify-content-between align-items-center px-2">
             <div class="px-2">
                 <p>Seguinos en nuestras redes:</p>
