--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -57,7 +57,7 @@
             </div>
         </form>
     </main>
-    <footer class="d-flex flex-row justify-content-around px-2">
+    <footer class="d-flex flex-row justify-content-around px-2 fixed-bottom">
         <div class="d-flex flex-row justify-content-between align-items-center px-2">
             <div class="px-2">
                 <p>Seguinos en nuestras redes:</p>
