Trabajo casi termniado

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
         </section>
     </main>
-    <footer class="d-flex flex-row justify-content-around px-2 fixed-bottom">
+    <footer class="d-flex flex-row justify-content-around px-2">
         <div class="d-flex flex-row justify-content-between align-items-center px-2">
             <div class="px-2">
                 <p>Seguinos en nuestras redes:</p>
