--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -34,12 +34,28 @@
             </div>
         </nav>
     </header>
-    <main class="mainNosotros">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus sequi adipisci distinctio omnis iure nesciunt voluptas obcaecati optio fuga saepe sed eos corporis temporibus magnam, error, earum soluta tenetur numquam.</p>
-        <img src="../Multimedia/MundoFrio.png" alt="" width="100%">
-        <img src="../Multimedia/MundoFrio.png" alt="" width="100%">
+
+    <main>
+        <h1>Nosotros</h1>
+        <section class="mainNosotros">
+            <p>Mundo frio se inauguró el 1 febrero de 2021, surgiendo de una necesidad en el pueblo donde se encuentra, Galvez, donde no se podian conseguir productos congelados, ya sea, frutas, verduras, pescados, alimentos apto para vegetarianos y veganos.<br>
+            <br>
+            ¿Porque comprar productos congelados?<br>
+            Conserva los nutrientes, detiene el proceso natural de degradación y evita el crecimiento de bacterias. La congelación de los alimentos se ha convertido en la técnica de conservación más usada y efectiva.<br>
+            <br>
+            Seguridad e higiene: La degradación de los alimentos congelados es más lenta y además está a salvo de numerosos microorganismos y bacterias.<br> 
+            Frescura: Si se ha mantenido la cadena de frío, estos productos mantienen al descongelarlos todas sus cualidades en cuanto a color, sabor, apariencia, textura, etc.<br>
+            Nutritivo: Casi todos los nutrientes de los alimentos congelados se mantienen sin pérdida alguna.<br>
+            Universalidad: La mayoría de los alimentos -crudos o ya cocinados- se puede congelar.<br> 
+            Economia: De los productos congelados se aprovecha todo; y eso supone a veces una ventaja. Por ejemplo, cuando se compra pescado fresco se desecha entre el 30 y el 40% de la cantidad comprada.<br>  
+            Todo el año: Como los productos se conservan perfectamente en el congelador podemos disponer de ellos en cualquier momento aunque no sean de temporada.<br> 
+            Comodidad: Los alimentos congelados son fáciles de almacenar y vienen preparados para ser cocinados o calentados directamente sin que se tengan que lavar o limpiar.<br>
+            </p>
+            <img src="../Multimedia/mundo-frio-1.jpg" alt="" width="100%">
+            <img src="../Multimedia/MundoFrio.png" alt="" width="100%">
+            </section>
     </main>
-    <footer class="d-flex flex-row justify-content-around px-2 fixed-bottom">
+    <footer class="d-flex flex-row justify-content-around px-2">
         <div class="d-flex flex-row justify-content-between align-items-center px-2">
             <div class="px-2">
                 <p>Seguinos en nuestras redes:</p>
