--- a/pages/productos.html
+++ b/pages/productos.html
@@ -62,17 +62,65 @@
                     <p>Remolacha</p>
                 </div>
                 <div>
-                    <img src="../Multimedia/Conosud/cebolla.png" alt="cebolla" width="100%">
-                    <p>Cebolla</p>
+                    <img src="../Multimedia/Felices las Vacas/Big-Classic.png" alt="Big-Classic" width="100%">
+                    <p>Big Classic</p>
                 </div>
                 <div>
-                    <img src="../Multimedia/Conosud/chaucha.png" alt="chaucha" width="100%">
-                    <p>Chaucha</p>
+                    <img src="../Multimedia/Felices las Vacas/Chickenvil.png" alt="Chickenvil" width="100%">
+                    <p>Chickenvil</p>
+                </div>
+                <div>
+                    <img src="../Multimedia/Felices las Vacas/Karnevil.png" alt="Karnevil" width="100%">
+                    <p>Karnevil</p>
+                </div>
+                <div>
+                    <img src="../Multimedia/Felices las Vacas/nuggets.png" alt="nuggets" width="100%">
+                    <p>Nuggets</p>
+                </div>
+                <div>
+                    <img src="../Multimedia/Granja del Sol/legumbres.png" alt="legumbres" width="100%">
+                    <p>Milanesa de legumbres</p>
+                </div>
+                <div>
+                    <img src="../Multimedia/Granja del Sol/Milanesa-de-Arroz-con-vegetales.png" alt="arroz" width="100%">
+                    <p>Milanesa de arroz con vegetales</p>
+                </div>
+                <div>
+                    <img src="../Multimedia/Granja del Sol/Milanesa-de-soja-Calabaza.png" alt="calabaza" width="100%">
+                    <p>Milanesa de soja con calabaza</p>
+                </div>
+                <div>
+                    <img src="../Multimedia/Granja del Sol/Milanesa-de-soja-Caseras-x4.png" alt="soja casera" width="100%">
+                    <p>Milanesa de soja casera</p>
+                </div>
+                <div>
+                    <img src="../Multimedia/Granja del Sol/Milanesa-de-soja-Espinaca.png" alt="soja con espinaca" width="100%">
+                    <p>Milanesa de soja con espinaca</p>
+                </div>
+                <div>
+                    <img src="../Multimedia/Granja del Sol/Milanesas-de-4-Vegetales.png" alt="sonja con 4 vegetales" width="100%">
+                    <p>Milanesa de soja con 4 vegetales</p>
+                </div>
+                <div>
+                    <img src="../Multimedia/Granja del Sol/Milanesas-de-Espinaca.png" alt="milanesa de espinaca" width="100%">
+                    <p>Milanesa de espinaca</p>
+                </div>
+                <div>
+                    <img src="../Multimedia/NotCo/notchickenburger.jpg" alt="notchickenburger" width="100%">
+                    <p>Not chicken burger</p>
+                </div>
+                <div>
+                    <img src="../Multimedia/NotCo/notburger.jpg" alt="notburger" width="100%">
+                    <p>Not burguer</p>
+                </div>
+                <div>
+                    <img src="../Multimedia/NotCo/notnuggets.jpg" alt="notnuggets" width="100%">
+                    <p>Not nuggets</p>
                 </div>
             </ul>
         </section>
     </main>
-    <footer class="d-flex flex-row justify-content-around px-2 fixed-bottom">
+    <footer class="d-flex flex-row justify-content-around px-2">
         <div class="d-flex flex-row justify-content-between align-items-center px-2">
             <div class="px-2">
                 <p>Seguinos en nuestras redes:</p>
