--- a/pages/productos.html
+++ b/pages/productos.html
@@ -83,11 +83,11 @@
                 </div>
                 <div>
                     <img src="../Multimedia/Granja del Sol/Milanesa-de-Arroz-con-vegetales.png" alt="arroz" width="100%">
-                    <p>Milanesa de arroz con vegetales</p>
+                    <p>Milanesa de arroz c/vegetales</p>
                 </div>
                 <div>
                     <img src="../Multimedia/Granja del Sol/Milanesa-de-soja-Calabaza.png" alt="calabaza" width="100%">
-                    <p>Milanesa de soja con calabaza</p>
+                    <p>Milanesa de soja c/calabaza</p>
                 </div>
                 <div>
                     <img src="../Multimedia/Granja del Sol/Milanesa-de-soja-Caseras-x4.png" alt="soja casera" width="100%">
@@ -95,11 +95,11 @@
                 </div>
                 <div>
                     <img src="../Multimedia/Granja del Sol/Milanesa-de-soja-Espinaca.png" alt="soja con espinaca" width="100%">
-                    <p>Milanesa de soja con espinaca</p>
+                    <p>Milanesa de soja c/espinaca</p>
                 </div>
                 <div>
                     <img src="../Multimedia/Granja del Sol/Milanesas-de-4-Vegetales.png" alt="sonja con 4 vegetales" width="100%">
-                    <p>Milanesa de soja con 4 vegetales</p>
+                    <p>Milanesa de soja 4 vegetales</p>
                 </div>
                 <div>
                     <img src="../Multimedia/Granja del Sol/Milanesas-de-Espinaca.png" alt="milanesa de espinaca" width="100%">
@@ -114,8 +114,40 @@
                     <p>Not burguer</p>
                 </div>
                 <div>
-                    <img src="../Multimedia/NotCo/notnuggets.jpg" alt="notnuggets" width="100%">
-                    <p>Not nuggets</p>
+                    <img src="../Multimedia/Paladini/hambur-clasica.jpg" alt="hamburguesa clasica" width="100%">
+                    <p>Hamburguesa clasica</p>
+                </div>
+                <div>
+                    <img src="../Multimedia/Paladini/hambur-finas.jpg" alt="hamburguesa finita" width="100%">
+                    <p>Hamburguesa finita</p>
+                </div>
+                <div>
+                    <img src="../Multimedia/Paladini/nuggets-pollo.jpg" alt="nugget pollo" width="100%">
+                    <p>Nuggets de pollo</p>
+                </div>
+                <div>
+                    <img src="../Multimedia/Paladini/medallones-pollo.jpg" alt="pollo" width="100%">
+                    <p>Medallon de pollo</p>
+                </div>
+                <div>
+                    <img src="../Multimedia/Paladini/pollo-espinaca.jpg" alt="pollo con espinaca" width="100%">
+                    <p>Medallon de pollo con espinica</p>
+                </div>
+                <div>
+                    <img src="../Multimedia/Paladini/pollo-jamon.jpg" alt="pollo con jamon" width="100%">
+                    <p>Medallon de pollo con jamon</p>
+                </div>
+                <div>
+                    <img src="../Multimedia/Paladini/soja-clasicas.jpg" alt="soja clasica" width="100%">
+                    <p>Milanesa de soja</p>
+                </div>
+                <div>
+                    <img src="../Multimedia/Paladini/soja-espinaca.jpg" alt="soja con espinaca" width="100%">
+                    <p>Milanesa de soja con espinaca</p>
+                </div>
+                <div>
+                    <img src="../Multimedia/Paladini/soja-jamon.jpg" alt="soja con jamon" width="100%">
+                    <p>Milanesa de soja con jamon</p>
                 </div>
             </ul>
         </section>
